SLING-12038 add support for reified OSGi config annotations as test parameters (#31)